Assert fails when switching to the shading tab #104918

Closed
opened 2023-02-18 13:19:52 +01:00 by Martijn Versteegh · 3 comments

System Information
Operating system: Linux-6.0.0-1010-oem-x86_64-with-glibc2.35 64 Bits
Graphics card: Mesa Intel(R) Graphics (ADL GT2) Intel 4.6 (Core Profile) Mesa 22.3.4

Blender Version
Broken: version: 3.6.0 Alpha, branch: main (modified), commit date: 2023-02-18 05:44, hash: c39b81d83288
Worked: (newest version of Blender that worked as expected)

Short description of error
When running a debug build, switching the default scene to the shading tab causes an assert to trigger.

Exact steps for others to reproduce the error

  • Compile debug version of blender
  • start blender
  • switch to 'Shader' workspace

This happens since PR #104536

**System Information** Operating system: Linux-6.0.0-1010-oem-x86_64-with-glibc2.35 64 Bits Graphics card: Mesa Intel(R) Graphics (ADL GT2) Intel 4.6 (Core Profile) Mesa 22.3.4 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main (modified), commit date: 2023-02-18 05:44, hash: `c39b81d83288` Worked: (newest version of Blender that worked as expected) **Short description of error** When running a debug build, switching the default scene to the shading tab causes an assert to trigger. **Exact steps for others to reproduce the error** - Compile debug version of blender - start blender - switch to 'Shader' workspace This happens since PR #104536
Martijn Versteegh added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-02-18 13:19:53 +01:00
Martijn Versteegh added reference main 2023-02-18 13:20:07 +01:00
Martijn Versteegh added
Type
Bug
and removed
Type
Report
labels 2023-02-18 13:21:05 +01:00
Martijn Versteegh added this to the EEVEE & Viewport project 2023-02-18 13:23:09 +01:00
Martijn Versteegh added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-02-19 12:14:57 +01:00
Author
Member

As it also happens on my other machines I set it to confirmed.

As it also happens on my other machines I set it to confirmed.
Member

@Baardaap : when confirming, please add the Module tag (not the Project)

@Baardaap : when confirming, please add the Module tag (not the Project)
Philipp Oeser added the
Module
EEVEE & Viewport
label 2023-02-20 09:16:41 +01:00
Philipp Oeser removed this from the EEVEE & Viewport project 2023-02-20 09:17:12 +01:00
Author
Member

Sorry, that's what I meant to do.

Sorry, that's what I meant to do.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-22 17:39:13 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104918
No description provided.